privacy policy for bot

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,6 +5,7 @@
     "previous": "Previous",
     "tagline": "Build Bot using JavaScript and React",
     "basics": "Learn Basics",
+    "privacy": "Privacy Policy",
     "quick-start": "Quick Start",
     "Quick Start": "Quick Start",
     "Docs": "Docs",
