--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,7 +5,9 @@
     "previous": "Previous",
     "tagline": "Build Bot using JavaScript and React",
     "basics": "Learn Basics",
+    "componentAttachment": "Attachment",
     "componentMessage": "Message",
+    "componentSenderAction": "SenderAction",
     "constants": "Constants",
     "privacy": "Privacy Policy",
     "quick-start": "Quick Start",
