--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -7,7 +7,11 @@
     "basics": "Learn Basics",
     "componentAttachment": "Attachment",
     "componentMessage": "Message",
+    "componentPostbackButton": "Postback Button",
+    "componentQuickReply": "QuickReply",
     "componentSenderAction": "SenderAction",
+    "componentShareButton": "Share Button",
+    "componentURLButton": "URL Button",
     "constants": "Constants",
     "privacy": "Privacy Policy",
     "quick-start": "Quick Start",
