--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -24,7 +24,8 @@
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
     "Basics": "Basics",
-    "Component": "Component"
+    "Basic Components": "Basic Components",
+    "Buttons": "Buttons"
   },
   "pages-strings": {
     "Help Translate|recruit community translators for your project": "Help Translate",
