--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -21,6 +21,7 @@
     "quick-start": "Quick Start",
     "Quick Start": "Quick Start",
     "templateButton": "Button Template",
+    "templateGeneric": "Generic Template",
     "Docs": "Docs",
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
