--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -22,6 +22,7 @@
     "Quick Start": "Quick Start",
     "templateButton": "Button Template",
     "templateGeneric": "Generic Template",
+    "tempalteList": "List Template",
     "Docs": "Docs",
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
