--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -23,6 +23,7 @@
     "templateButton": "Button Template",
     "templateGeneric": "Generic Template",
     "templateList": "List Template",
+    "templateMedia": "Media Template",
     "Docs": "Docs",
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
