--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -24,6 +24,7 @@
     "templateGeneric": "Generic Template",
     "templateList": "List Template",
     "templateMedia": "Media Template",
+    "templateOpenGraph": "OpenGraph Template",
     "Docs": "Docs",
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
