--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -25,6 +25,7 @@
     "templateList": "List Template",
     "templateMedia": "Media Template",
     "templateOpenGraph": "OpenGraph Template",
+    "templateReceipt": "Receipt Template",
     "Docs": "Docs",
     "GitHub": "GitHub",
     "Demo Bot Repo": "Demo Bot Repo",
